Fix: scrollbar UI

--- a/client/src/components/UI/Modal.module.css
+++ b/client/src/components/UI/Modal.module.css
@@ -7,7 +7,7 @@
 }
 
 .overlay {
-	position: absolute;
+	position: fixed;
 	top: 50%;
 	left: 50%;
 	z-index: 8;
