--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,16 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
+body::-webkit-scrollbar {
+	width: 10px;
+	background-color: #14142a;
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: #ffffff;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+	background-color: #dddddd;
+}
